Color and Alignment Fixes

--- a/style.css
+++ b/style.css
@@ -1,20 +1,46 @@
-*Body font*/
+/*Body font*/
+* {
+max-width:960px;
+}
+html, body {
+    margin:0;
+    padding:0;
+    height:100%;
+}
+.page {
+    min-height:100%;
+    position:relative;
+}
+.header {
+    padding:0px;
+}
+.content{
+    padding:10px;
+    padding-bottom:45px;   /* Height+padding(top and botton) of the footer */
+    text-align:justify; 
+ }
+.footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:15px;   /* Height of the footer */
+    padding:10px 0; /*paddingtop+bottom 20*/
+}
+
+.content {
+    height:100%; // IE HACK
+}
 body
 {
+    height:100%; 
+    max-width:500px;
+    margin:0; 
+    padding:0;
     background-color:#003549;
-    bgcolor:#003549
-    font-family: 'Droid Sans', sans-serif;
-    text-decoration: none;
-    height: 100%;
-    width: 50%;
-}
-html
-{
-    background-color:#003549;
-    bgcolor:#003549
     font-family: 'Droid Sans', sans-serif;
     text-decoration: none;
 }
+
 
 /*Title font styling*/
 ul.rss-title
@@ -127,6 +153,7 @@ ul.rss-footer a
       background-repeat:no-repeat;
       text-align: right;
       margin-bottom: 10px;
+      display: inline;
 }
 #footer-bar ul {
         width: 850px;
@@ -136,6 +163,7 @@ ul.rss-footer a
         position: relative;
         left: 0px;
         top: 0px;
+        display: inline;
 }
 #footer-bar li {
         display: inline;
@@ -143,37 +171,12 @@ ul.rss-footer a
         margin-left: 6px;
 }
 #footer-bar li a {
-    color: #FFFFFF;
+	display: inline;
+	color: #FFFFFF;
 }
 
 /*Others*/
 img {
 	max-width: 100%;
 	height: auto;
-}
-.video {
-	position: relative;
-	padding-bottom: 56.25%;
-	height: 0;
-	overflow: hidden;
-}
-
-.video iframe,  
-.video object,  
-.video embed {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-@media \0screen {
-  img { 
-  	width: auto; /* for ie 8 */
-  }
-}
-
-.break-word {
-		word-wrap: break-word;
 }
